more stuff, more slides, more layouts

--- a/_data/presentation.yml
+++ b/_data/presentation.yml
@@ -2,7 +2,7 @@
 title: "Jekyll + Impress.js"
 description: |
 
-  Just that more impressive jekyllization
+  Just that much more Impressive Jekyllization!
 
 author:
   name: Tamara Temple
