--- a/_data/presentation.yml
+++ b/_data/presentation.yml
@@ -1,9 +1,6 @@
 ---
-title: "Jekyll + Impress.js"
-description: |
-
-  Just that much more Impressive Jekyllization!
-
+title: "My Personal Learning Strategies"
+description: A lightning talk
 author:
   name: Tamara Temple
   email: tamouse@gmail.com
